RESOLVED FIXED 82483
[Qt][WK2] Title in MiniBrowser is not updated for a page with no title
https://bugs.webkit.org/show_bug.cgi?id=82483
Summary [Qt][WK2] Title in MiniBrowser is not updated for a page with no title
Dinu Jacob
Reported 2012-03-28 10:52:41 PDT
MiniBrowser window displays the title of the previous page when displaying a page with no title
Attachments
Patch (5.20 KB, patch)
2012-03-28 11:21 PDT, Dinu Jacob
no flags
API test fix patch (9.54 KB, patch)
2012-04-10 13:01 PDT, Dinu Jacob
no flags
Dinu Jacob
Comment 1 2012-03-28 10:56:54 PDT
When the load has been committed, even though the title has been reset in WebFrameProxy::didCommitLoad, no titleChanged signal is emitted by QtWebPageLoadClient (though urlChanged is emitted).
Dinu Jacob
Comment 2 2012-03-28 11:21:18 PDT
WebKit Review Bot
Comment 3 2012-04-10 08:26:27 PDT
Comment on attachment 134348 [details] Patch Clearing flags on attachment: 134348 Committed r113715: <http://trac.webkit.org/changeset/113715>
WebKit Review Bot
Comment 4 2012-04-10 08:26:37 PDT
All reviewed patches have been landed. Closing bug.
Csaba Osztrogonác
Comment 5 2012-04-10 08:59:48 PDT
Reopen, because it broke API tests: FAIL! : qmltests::WebViewApplicationSchemes::test_multipleSchemes() Compared values are not the same Actual (): Scheme2 Reply Expected (): Scheme1 Reply Loc: [/home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/Source/WebKit2/UIProcess/API/qt/tests/qmltests/WebView/tst_applicationScheme.qml(98)] FAIL! : qmltests::WebViewApplicationSchemes::test_multipleUrlsForScheme() Compared values are not the same Actual (): Scheme3 Reply1 Expected (): Scheme3 Reply2 Loc: [/home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/Source/WebKit2/UIProcess/API/qt/tests/qmltests/WebView/tst_applicationScheme.qml(114)] FAIL! : qmltests::WebViewPreferences::test_fixedFontSizeChanged() Compared values are not the same Actual (): Original Title Expected (): 13px Loc: [/home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/Source/WebKit2/UIProcess/API/qt/tests/qmltests/WebView/tst_preferences.qml(240)] FAIL! : qmltests::WebViewPreferences::test_fontSizeChanged() Compared values are not the same Actual (): Original Title Expected (): 16px Loc: [/home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/Source/WebKit2/UIProcess/API/qt/tests/qmltests/WebView/tst_preferences.qml(222)] FAIL! : qmltests::WebViewPreferences::test_minimumFontSizeChanged() 'verify()' returned FALSE. () Loc: [/home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/Source/WebKit2/UIProcess/API/qt/tests/qmltests/WebView/tst_preferences.qml(268)] FAIL! : qmltests::WebViewTitleChangedSignal::test_titleFirstLoad() Compared values are not the same Actual (): Test page 3 Expected (): New Title Loc: [/home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/Source/WebKit2/UIProcess/API/qt/tests/qmltests/WebView/tst_titleChanged.qml(28)] Could you check and fix, please?
Dinu Jacob
Comment 6 2012-04-10 09:01:36 PDT
(In reply to comment #5) > Reopen, because it broke API tests: > FAIL! : qmltests::WebViewApplicationSchemes::test_multipleSchemes() Compared values are not the same > Actual (): Scheme2 Reply > Expected (): Scheme1 Reply > Loc: [/home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/Source/WebKit2/UIProcess/API/qt/tests/qmltests/WebView/tst_applicationScheme.qml(98)] > > FAIL! : qmltests::WebViewApplicationSchemes::test_multipleUrlsForScheme() Compared values are not the same > Actual (): Scheme3 Reply1 > Expected (): Scheme3 Reply2 > Loc: [/home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/Source/WebKit2/UIProcess/API/qt/tests/qmltests/WebView/tst_applicationScheme.qml(114)] > > FAIL! : qmltests::WebViewPreferences::test_fixedFontSizeChanged() Compared values are not the same > Actual (): Original Title > Expected (): 13px > Loc: [/home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/Source/WebKit2/UIProcess/API/qt/tests/qmltests/WebView/tst_preferences.qml(240)] > > FAIL! : qmltests::WebViewPreferences::test_fontSizeChanged() Compared values are not the same > Actual (): Original Title > Expected (): 16px > Loc: [/home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/Source/WebKit2/UIProcess/API/qt/tests/qmltests/WebView/tst_preferences.qml(222)] > > FAIL! : qmltests::WebViewPreferences::test_minimumFontSizeChanged() 'verify()' returned FALSE. () > Loc: [/home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/Source/WebKit2/UIProcess/API/qt/tests/qmltests/WebView/tst_preferences.qml(268)] > > FAIL! : qmltests::WebViewTitleChangedSignal::test_titleFirstLoad() Compared values are not the same > Actual (): Test page 3 > Expected (): New Title > Loc: [/home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/Source/WebKit2/UIProcess/API/qt/tests/qmltests/WebView/tst_titleChanged.qml(28)] > > > Could you check and fix, please? Sure, wull do that.
Dinu Jacob
Comment 7 2012-04-10 13:01:58 PDT
Created attachment 136521 [details] API test fix patch
Csaba Osztrogonác
Comment 8 2012-04-13 06:06:43 PDT
ping review to ublock failing API tests :)
WebKit Review Bot
Comment 9 2012-04-13 07:23:24 PDT
Comment on attachment 136521 [details] API test fix patch Clearing flags on attachment: 136521 Committed r114129: <http://trac.webkit.org/changeset/114129>
WebKit Review Bot
Comment 10 2012-04-13 07:23:29 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.