[Qt][WK2] Title in MiniBrowser is not updated for a page with no title https://bugs.webkit.org/show_bug.cgi?id=82483

Patch by Dinu Jacob <dinu.jacob@nokia.com> on 2012-04-10
Reviewed by Kenneth Rohde Christiansen.

Source/WebKit2:

titleChanged signal is not emitted on comitting a new load.

* UIProcess/API/qt/tests/html/basic_page.html:
* UIProcess/API/qt/tests/qquickwebview/tst_qquickwebview.cpp:
(tst_QQuickWebView):
(tst_QQuickWebView::titleUpdate):
* UIProcess/qt/QtWebPageLoadClient.cpp:
(QtWebPageLoadClient::didCommitLoadForFrame):

Tools:

Set window title to default if there is no page title.

* MiniBrowser/qt/BrowserWindow.cpp:
(BrowserWindow::BrowserWindow):
(BrowserWindow::onTitleChanged):
* MiniBrowser/qt/BrowserWindow.h:
(BrowserWindow):

Canonical link: https://commits.webkit.org/101024@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113715 268f45cc-cd09-0410-ab3c-d52691b4dbfc